[tool.poetry]
name = "versus-cli"
version = "0.2.1"
description = "Run A vs. B analyses, storing analysis input, command and result in YAMLized dataframe. Part of Wistan infrastructure."
authors = ["Ben Skubi <bskubi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
versus-cli = 'versus_cli.__main__:versus'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
